k8s/base/order-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: techcommerce
spec:
  replicas: 2
  selector:
    matchLabels: { app: order-api }
  template:
    metadata:
      labels: { app: order-api }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: order-api
          image: techcommerce-order-api:test
          imagePullPolicy: Never
          ports:
            - containerPort: 7000
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
          readinessProbe:
            httpGet: { path: /healthz, port: 7000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /livez, port: 7000 }
            initialDelaySeconds: 10
            periodSeconds: 15
