k8s/base/product-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: techcommerce-staging
spec:
  replicas: 2
  selector:
    matchLabels: { app: product-api }
  template:
    metadata:
      labels: { app: product-api }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: product-api
          image: product-api:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests: { cpu: "200m", memory: "256Mi" }
            limits:   { cpu: "1000m", memory: "512Mi" }
          readinessProbe:
            httpGet: { path: /healthz, port: 5000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /livez, port: 5000 }
            initialDelaySeconds: 10
            periodSeconds: 15
