k8s/base/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: techcommerce
spec:
  type: ClusterIP
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 3000
