k8s/base/order-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api
  namespace: techcommerce
spec:
  type: ClusterIP
  selector: { app: order-api }
  ports:
    - port: 7000
      targetPort: 7000
