k8s/base/product-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: techcommerce
spec:
  type: ClusterIP
  selector: { app: product-api }
  ports:
    - port: 5000
      targetPort: 5000
